Correct graph alignment

--- a/css/interactive.styl
+++ b/css/interactive.styl
@@ -333,7 +333,7 @@ p
 
 #graph
   display: inline
-  float: left
+  float: right
   width: 6*$partridge + 7*$gutter
   height: 333px
   border: 1px solid #C0C0C0
